split css files and added inset shadow class

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,100 +1,7 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss/base";
+@import "./base.css";
 
-:root {
-  --breadpink-200: #ff99e2;
-  --breadpink-100: #c463ca;
-}
+@import "tailwindcss/components";
+@import "./components.css";
 
-@layer base {
-  body {
-    font-family: "Press Start 2P", monospace;
-    @apply bg-breadgray-200 text-gray-200;
-  }
-
-  .lds-ring {
-    display: inline-block;
-    position: relative;
-    width: 200px;
-    height: 200px;
-  }
-  .lds-ring div {
-    box-sizing: border-box;
-    display: block;
-    position: absolute;
-    width: 200px;
-    height: 200px;
-    border: 24px solid rgb(20, 20, 20);
-    border-radius: 50%;
-    animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-    border-color: rgb(80, 80, 80) transparent transparent transparent;
-  }
-  .lds-ring div:nth-child(1) {
-    animation-delay: -0.45s;
-  }
-  .lds-ring div:nth-child(2) {
-    animation-delay: -0.3s;
-  }
-  .lds-ring div:nth-child(3) {
-    animation-delay: -0.15s;
-  }
-  @keyframes lds-ring {
-    0% {
-      transform: rotate(0deg);
-    }
-    100% {
-      transform: rotate(360deg);
-    }
-  }
-
-  @keyframes elip {
-    0% {
-      opacity: 0;
-    }
-    59% {
-      opacity: 0;
-    }
-    60% {
-      opacity: 1;
-    }
-    100% {
-      opacity: 1;
-    }
-  }
-  .elip-1 {
-    animation: elip 0.6s linear infinite;
-  }
-  .elip-2 {
-    animation: elip 0.6s linear infinite;
-    animation-delay: 0.2s;
-  }
-  .elip-3 {
-    animation: elip 0.6s linear infinite;
-    animation-delay: 0.4s;
-  }
-
-  @keyframes gradient-animation {
-    0% {
-      background-position: 0 0;
-    }
-    50% {
-      background-position: 100% 100%;
-    }
-    100% {
-      background-position: 0 0;
-    }
-  }
-
-  .button-gradient {
-    background: linear-gradient(270deg, #d367d9, #bd51c3) 0% 0% / 400% 400%;
-    animation: 3s ease 0s infinite normal none running gradient-animation;
-  }
-  .button-gradient:disabled {
-    background: none;
-    background-color: var(--breadpink-100);
-    opacity: 40%;
-    z-index: -10;
-    animation: none;
-  }
-}
+@import "tailwindcss/utilities";
