--- a/src/css/base.css
+++ b/src/css/base.css
@@ -5,10 +5,15 @@
 
 @layer base {
   body {
-    font-family: "Press Start 2P", monospace;
+    font-family: 'Press Start 2P', monospace;
     @apply bg-breadgray-200 text-gray-200;
   }
 
+  .prose {
+    font-size: 1.125rem;
+  }
+
+  /* button stuff */
   @keyframes gradient-animation {
     0% {
       background-position: 0 0;
@@ -31,10 +36,5 @@
     opacity: 40%;
     z-index: -10;
     animation: none;
-  }
-
-  
-  .prose {
-    font-size: 1.125rem;
   }
 }
