twk wallet disp + style text colors directly

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -6,7 +6,7 @@
 @layer base {
   body {
     font-family: 'Press Start 2P', monospace;
-    @apply bg-breadgray-200 text-gray-200;
+    @apply bg-breadgray-200;
   }
 
   .prose {
