--- a/src/css/base.css
+++ b/src/css/base.css
@@ -6,7 +6,7 @@
 @layer base {
   body {
     font-family: 'Press Start 2P', monospace;
-    @apply bg-breadgray-darkest;
+    background-color: #202020;
   }
 
   .prose {
